<?xml version='1.0' encoding='UTF-8'?>
<resources>

    <string name="app_name">Privacy Impact</string>
    <string name="activity_set_preference_name">Privacy Preference</string>
    <string name="activity_sample_launcher">Privacy Impact Tester</string>
    <string name="notifications">Notifications</string>
    <string name="no_description_available">No description available</string>
    <string name="privacy_impact">privacy impact</string>
    <string name="privacy_level_low">low</string>
    <string name="privacy_level_medium">medium</string>
    <string name="privacy_level_high">high</string>
    <string name="privacy_level_none">none</string>
    <string name="what_does_this_mean">What does this mean?</string>
    <string name="notifications_off">Off</string>
    <string name="notifications_on">On</string>
    <string name="notifications_priority">Priority</string>
    <string name="dismiss_privacy_impact">Don\'t show this screen again. You can always change this in the settings</string>
    <string name="take_me_back">Take me back</string>
    <string name="start_the_app">Start the app</string>
    <string name="close">close</string>
    <string name="privacy_impact_detailed_info">With Fairphone Privacy Impact we want to create privacy awareness. To learn more about Privacy Impact and how the impact is calculated, please visit</string>
    <string name="privacy_impact_info_link_text">Fairphone Privacy Impact detailed info</string>
    <string name="no_permissons_required">NO PERMISSIONS REQUIRED</string>
    <string name="privacy_level_none_description">This app does not require any permissions and is not able to access any of your personal data, therefore it should be safe to use and without any privacy consequences.</string>
    <string name="privacy_level_low_description">This app needs at least one permission to be able to work. Review the permission(s) below. If you trust the app developer, it should be safe to use and without any privacy consequences.</string>
    <string name="privacy_level_medium_description">This app needs access to a great deal of personal data on your device in order to work. Please double check the permissions below. If you do not trust the app developer, we recommend you not to use it and look for alternative apps.</string>
    <string name="privacy_level_high_description">This app needs access to a great deal of personal data on your device in order to work. Please double check the permissions below. If you do not trust the app developer, we highly recommend you not to use it and look for alternative apps.</string>
    <string name="this_app_is_able_to">THIS APP IS ABLE TO</string>
    <string name="oobe_privacy_impact_title">Fairphone Privacy Impact Analysis</string>
    <string name="oobe_privacy_impact_text">It shows the impact a particular app may have on your device based on the permissions it requires. Certain app permissions have direct access to your personal data.</string>
    <string name="got_it">got it</string>
    <string name="oobe_notifications_title">App Notifications</string>
    <string name="oobe_notifications_text">Choose if you want to receive notifications from the app. Notifications appear on the top of the screen. If you select Priority, app notifications will stay on top of the list.</string>
    <string name="notifications_on_description">Show notifications from this app.</string>
    <string name="notifications_off_description">Never show notifications from this app.</string>
    <string name="notifications_priority_description">Show notifications at the top of the list and keep them coming when the device is set to priority interruptions only.</string>
    <string name="privacy_popup_checkbox_title">Disable Privacy Impact popup</string>
    <string name="privacy_popup_checkbox_description">Disables the Privacy Impact popup shown on the first app launch</string>

</resources>