<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:id="@+id/privacy_impact_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/privacy_impact"
        android:maxLines="1"
        android:textAllCaps="true"
        android:textColor="@color/blue"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/privacy_impact_level_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:maxLines="1"    
        android:textAllCaps="true"
        android:textColor="@color/blue"
        android:textSize="34dp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/privacy_impact_detailed_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/privacy_impact_detailed_info"
                android:textColor="@color/grey_light"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/privacy_impact_info_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:maxLines="2"
                android:textColor="@color/blue"
                android:textColorLink="@color/blue"
                android:textSize="14dp" />

            <LinearLayout
                android:id="@+id/no_permissions_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25.7dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@string/no_permissons_required"
                    android:textAllCaps="true"
                    android:textColor="@color/grey"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7.3dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/privacy_level_none_description"
                    android:textColor="@color/grey_light"
                    android:textSize="14dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/permissions_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/privacy_level_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/privacy_level_low_description"
                    android:textColor="@color/grey_light"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25.7dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@string/this_app_is_able_to"
                    android:textAllCaps="true"
                    android:textColor="@color/grey"
                    android:textSize="16dp" />

                <LinearLayout
                    android:id="@+id/permissions_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="21dp"
                    android:orientation="vertical" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/confirmation_yes_button"
        style="@style/button_blue"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:text="@string/close" />

</LinearLayout>