<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/app_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="41dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.7dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-thin"
                android:lines="1"
                android:textColor="@color/text_grey"
                android:textSize="34sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/privacy_group"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/privacy_level_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/privacy_impact"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/privacy_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/privacy_level_low"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:lines="1"
                android:text="@string/what_does_this_mean"
                android:textColor="@color/white"
                android:textSize="12dp" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/notification_switch"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:background="@color/white">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/notification_list_item_height" />

            <LinearLayout
                android:id="@+id/notification_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="42.5dp"
                android:layout_marginRight="221.5dp"
                android:layout_marginTop="30.3dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@string/notifications"
                    android:textColor="@color/text_grey"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4.1dp"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif"
                    android:maxLines="1"
                    android:text="@string/notifications_off"
                    android:textSize="13sp" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/triple_switch_group"
                android:layout_width="@dimen/notification_triple_switch_width"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="46.7dp">

                <View
                    android:id="@+id/toggle_background"
                    android:layout_width="@dimen/notification_triple_switch_background_width"
                    android:layout_height="@dimen/notification_triple_switch_background_height"
                    android:layout_marginLeft="@dimen/notification_triple_switch_background_margin_left"
                    android:layout_marginTop="@dimen/notification_triple_switch_background_margin_top"
                    android:background="@drawable/toggle_switch_background_grey" />

                <LinearLayout
                    android:layout_width="@dimen/notification_triple_switch_width"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ToggleButton
                        android:id="@+id/off_toggle_button"
                        android:layout_width="@dimen/notification_triple_switch_toggle_size"
                        android:layout_height="@dimen/notification_triple_switch_toggle_size"
                        android:background="@drawable/triple_toggle_button_grey_background"
                        android:checked="true"
                        android:textOff=""
                        android:textOn="" />

                    <ToggleButton
                        android:id="@+id/on_toggle_button"
                        android:layout_width="@dimen/notification_triple_switch_toggle_size"
                        android:layout_height="@dimen/notification_triple_switch_toggle_size"
                        android:layout_marginLeft="@dimen/notification_triple_switch_toggle_gap"
                        android:layout_marginRight="@dimen/notification_triple_switch_toggle_gap"
                        android:background="@drawable/triple_toggle_button_blue_background"
                        android:textOff=""
                        android:textOn="" />

                    <ToggleButton
                        android:id="@+id/priority_toggle_button"
                        android:layout_width="@dimen/notification_triple_switch_toggle_size"
                        android:layout_height="@dimen/notification_triple_switch_toggle_size"
                        android:background="@drawable/triple_toggle_button_green_background"
                        android:textOff=""
                        android:textOn="" />
                </LinearLayout>
            </FrameLayout>
        </FrameLayout>

        <CheckBox
            android:id="@+id/hide_privacy_impact_checkbox"
            style="@style/CheckBoxBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="42.5dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="23.7dp"
            android:maxLines="4"
            android:text="@string/dismiss_privacy_impact" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/take_me_back_button"
            style="@style/button_blue_border"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="@dimen/notification_horizontal_margin"
            android:layout_marginRight="@dimen/notification_horizontal_margin"
            android:maxLines="1"
            android:text="@string/take_me_back"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/start_the_app_button"
            style="@style/button_blue"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="@dimen/notification_horizontal_margin"
            android:layout_marginRight="@dimen/notification_horizontal_margin"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="15.7dp"
            android:text="@string/start_the_app"
            android:maxLines="1"
            android:textAllCaps="true" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/oobe_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true">

        <RelativeLayout
            android:id="@+id/privacy_oobe_popup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="254dp"
            android:layout_marginLeft="9.3dp"
            android:layout_marginRight="9.3dp"
            android:layout_marginBottom="9.3dp"
            android:background="@drawable/oobe_popup_arrow_up">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingTop="16dp"
            android:orientation="vertical">

            <TextView
                style="@style/oobe_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27.3dp"
                android:layout_marginRight="27.3dp"
                android:layout_marginTop="15dp"
                android:maxLines="1"
                android:text="@string/oobe_privacy_impact_title" />

            <TextView
                style="@style/oobe_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27.3dp"
                android:layout_marginRight="27.3dp"
                android:layout_marginTop="16dp"
                android:maxLines="9"
                android:text="@string/oobe_privacy_impact_text" />

            <TextView
                android:id="@+id/privacy_got_it"
                style="@style/button_blue_border"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="60.7dp"
                android:layout_marginRight="60.7dp"
                android:layout_marginTop="20dp"
                android:maxLines="1"
                android:text="@string/got_it" />
        </LinearLayout>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/notifications_oobe_popup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:background="@drawable/oobe_popup_arrow_left_down"
            android:layout_marginBottom="276.3dp"
            android:layout_marginLeft="9.3dp"
            android:layout_marginRight="9.3dp"
            android:layout_marginTop="9.3dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingBottom="16dp"
            android:orientation="vertical">

            <TextView
                style="@style/oobe_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27.3dp"
                android:layout_marginRight="27.3dp"
                android:layout_marginTop="9.3dp"
                android:maxLines="1"
                android:text="@string/oobe_notifications_title" />

            <TextView
                style="@style/oobe_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:maxLines="6"
                android:text="@string/oobe_notifications_text" />

            <TextView
                android:id="@+id/notifications_got_it"
                style="@style/button_blue_border"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="60.7dp"
                android:layout_marginRight="60.7dp"
                android:layout_marginTop="16dp"
                android:maxLines="1"
                android:text="@string/got_it" />
        </LinearLayout>
    </RelativeLayout>
    </FrameLayout>
</FrameLayout>
